cmake_minimum_required(VERSION 3.18)

# Central test configuration for SEP
include(CTest)
include(${CMAKE_SOURCE_DIR}/cmake/gtest.cmake)

# Organize tests by type
add_subdirectory(stdlib)
add_subdirectory(compiler)
add_subdirectory(interpreter)
add_subdirectory(unit)
add_subdirectory(integration)
add_subdirectory(performance)
add_subdirectory(app)
add_subdirectory(data_fetcher)
add_subdirectory(data_access)
add_subdirectory(market_cache)
add_subdirectory(pattern_metric_engine)
add_subdirectory(signal_fusion)
add_subdirectory(engine_config)
add_subdirectory(memory_tier_service)
add_subdirectory(processor)
add_subdirectory(facade)
add_subdirectory(quantum_pair_trainer)
add_subdirectory(training_session)
add_subdirectory(pattern_evolution)
add_subdirectory(ticker_analyzer)
